# zk-dpp-royalty-protocol

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cliff.toml  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: build.yml  ci.yml  deploy.yml  release.yml
apps/edge-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/edge-agent/src-tauri/src/: main.rs
apps/edge-agent/src-tauri/src/commands/: mod.rs
apps/edge-agent/src-tauri/src/ollama/: mod.rs
apps/edge-agent/src-tauri/src/storage/: mod.rs
apps/edge-agent/src-tauri/src/zk/: mod.rs
apps/edge-agent/ui/: index.html  package.json
apps/edge-agent/ui/src/: App.tsx  styles.css
circuits/noir/lib/: Nargo.toml
circuits/noir/lib/src/: lib.nr
circuits/noir/predicates/battery_capacity_gte_v1/: Nargo.toml
circuits/noir/predicates/battery_chemistry_in_set_v1/: Nargo.toml
circuits/noir/predicates/carbon_footprint_lifecycle_v1/: Nargo.toml
circuits/noir/predicates/carbon_footprint_lte_v1/: Nargo.toml
circuits/noir/predicates/cert_valid_v1/: Nargo.toml
circuits/noir/predicates/cobalt_origin_not_in_v1/: Nargo.toml
circuits/noir/predicates/due_diligence_valid_v1/: Nargo.toml
circuits/noir/predicates/energy_density_range_v1/: Nargo.toml
circuits/noir/templates/: Nargo.toml.tmpl  dual_range.nr.tmpl  lifecycle_aggregation.nr.tmpl  range_predicate.nr.tmpl  set_membership.nr.tmpl  timestamp_validity.nr.tmpl
contracts/: .gitignore  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: PaymentDistributor.sol  RoyaltySettlement.sol  VerificationEscrow.sol
contracts/src/interfaces/: IPaymentDistributor.sol  IRoyaltySettlement.sol  IVerificationEscrow.sol
contracts/src/mocks/: MockUSDC.sol
contracts/test/: Integration.t.sol  PaymentDistributor.t.sol  RoyaltySettlement.t.sol  VerificationEscrow.t.sol
crates/commitments/: Cargo.toml
crates/commitments/src/: lib.rs  merkle.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs
crates/zkp-core/: Cargo.toml
crates/zkp-core/src/: lib.rs
docs/adr/: 000-template.md  001-noir-for-zk-proofs.md  002-fastify-as-http-framework.md  003-base-l2-for-settlement.md  004-nats-jetstream-event-bus.md  005-keycloak-identity-provider.md  006-tiered-access-model.md  007-off-chain-first-settlement.md  008-predicate-library-design.md
docs/api/: openapi.yaml
docs/deployment/: configuration.md  docker.md  kubernetes.md  security.md
docs/developer/: architecture.md  concepts.md  local-setup.md  quickstart.md  testing.md
infra/docker/: docker-compose.dev.yml
infra/docker/init-db/: 01-init.sql  02-blockchain.sql
infra/docker/keycloak/: zkdpp-realm.json
infra/helm/zkdpp/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
scripts/: dev.sh
services/dpp-builder/: Dockerfile  package.json  tsconfig.json
services/dpp-builder/src/: index.ts  types.ts
services/metering-billing/: Dockerfile  package.json
services/metering-billing/src/: index.ts  types.ts
services/verify-gateway/: Dockerfile  package.json
services/verify-gateway/src/: index.ts  types.ts
tests/integration/: dpp-builder.test.ts  e2e-flow.test.ts  package.json  tsconfig.json  verify-gateway.test.ts
(+45 files in other folders)
