[workspace]
resolver = "2"
members = [
    "crates/commitments",
    "crates/crypto",
    "crates/zkp-core",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zk-dpp/royalty-protocol"

[workspace.dependencies]
# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# WASM support
wasm-bindgen = "0.2"

# Hex encoding
hex = "0.4"

# Testing
proptest = "1.4"
