[package]
name = "commitments"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Merkle tree commitments and claim hashing for ZK-DPP"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
