[package]
name = "crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic primitives for ZK-DPP (keys, signatures)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
proptest.workspace = true
