[package]
name = "zkp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZK proof verification for Noir circuits"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true

[dev-dependencies]
proptest.workspace = true
