[package]
name = "edge-agent"
version = "0.1.0"
description = "ZK-DPP Edge Agent for suppliers"
authors = ["ZK-DPP Team"]
license = "MIT OR Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri
tauri = { version = "1", features = ["shell-open", "dialog-all", "fs-all", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (from workspace)
commitments = { path = "../../../crates/commitments" }
crypto = { path = "../../../crates/crypto" }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# HTTP client (for Ollama)
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"
hex = { workspace = true }
aes-gcm = "0.10"
rand = { workspace = true }
base64 = "0.22"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# PDF/OCR (optional, can use external tools)
pdf-extract = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
